--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ kafka.bootstrapAddress=localhost:9092
 security.basic.enabled=false
 management.security.enabled=false
 //spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+spring.main.allow-circular-references=true
